[gd_scene load_steps=9 format=3 uid="uid://duovl5rl0w5fa"]

[ext_resource type="Script" path="res://root_logic.gd" id="1_jm7f0"]
[ext_resource type="Script" path="res://camera.gd" id="2_yw5f4"]
[ext_resource type="Script" path="res://grid.gd" id="3_78gud"]
[ext_resource type="Texture2D" uid="uid://c41b5b5s1xchi" path="res://Textures/basic_path.png" id="4_48s3h"]
[ext_resource type="Script" path="res://control.gd" id="4_63irt"]
[ext_resource type="Texture2D" uid="uid://cieioscrx6n54" path="res://Textures/arrow.png" id="4_av0fw"]
[ext_resource type="Script" path="res://ui_tile_button.gd" id="5_uq4m3"]
[ext_resource type="Texture2D" uid="uid://btsu3vtqmkjr4" path="res://Textures/conveyor_path.png" id="6_smq8y"]

[node name="Level_1" type="Node"]
script = ExtResource("1_jm7f0")

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(640, 360)
position_smoothing_speed = 10.0
drag_left_margin = 0.0
drag_top_margin = 0.0
drag_right_margin = 0.0
drag_bottom_margin = 0.0
script = ExtResource("2_yw5f4")

[node name="Grid" type="Node2D" parent="."]
script = ExtResource("3_78gud")

[node name="DirectionIndicator" type="TextureRect" parent="Grid"]
visible = false
z_index = 1
texture_filter = 1
pivot_offset = Vector2(16, 16)
texture = ExtResource("4_av0fw")
stretch_mode = 4

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ControlPanel" type="GridContainer" parent="CanvasLayer"]
offset_left = 20.0
offset_top = 590.0
offset_right = 1260.0
offset_bottom = 700.0
columns = 2
script = ExtResource("4_63irt")
metadata/_edit_use_anchors_ = true

[node name="BasicPath" type="TextureButton" parent="CanvasLayer/ControlPanel"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "Create a basic road"
texture_normal = ExtResource("4_48s3h")
stretch_mode = 4
script = ExtResource("5_uq4m3")
metadata/tile = 1

[node name="ConveyorBelt" type="TextureButton" parent="CanvasLayer/ControlPanel"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "Create a basic road"
texture_normal = ExtResource("6_smq8y")
stretch_mode = 4
script = ExtResource("5_uq4m3")
metadata/tile = 2

[node name="Button" type="Button" parent="CanvasLayer/ControlPanel"]
layout_mode = 2
text = "Play"

[connection signal="direction_changed" from="." to="Grid" method="_on_indicator_direction_changed"]
[connection signal="inside_control" from="CanvasLayer/ControlPanel" to="Grid" method="_on_control_panel_inside_control"]
[connection signal="outside_control" from="CanvasLayer/ControlPanel" to="Grid" method="_on_control_panel_outside_control"]
[connection signal="pressed" from="CanvasLayer/ControlPanel/BasicPath" to="CanvasLayer/ControlPanel/BasicPath" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/ControlPanel/ConveyorBelt" to="CanvasLayer/ControlPanel/ConveyorBelt" method="_on_pressed"]
